<resources>
    <string name="app_name">债懂</string>

    
    <string name="tab_my">我的</string>
    <string name="tab_bond_master">债懂</string>
    <string name="tab_scene">场景</string>
    <string name="tab_market">市场</string>

    <string name="new_message_notify">新消息提醒</string>
    <string name="feed_back">意见反馈</string>
    <string name="share_app">分享app</string>
    <string name="about_us">关于我们</string>
    <string name="custom_service">客服热线</string>
    <string name="check_upgrade">检查更新</string>

    <string name="my_evaluate">我的评测</string>
    <string name="my_bond_altas">债券图谱</string>
    <string name="my_finacing_plan">融资方案</string>
    <string name="my_subscribe">订阅管理</string>

    <string name="capacity_evaluate">智能评测</string>
    <string name="customized_service">定制服务</string>
    <string name="bond_message">债券资讯</string>
    <string name="hierarchy_calculate">分层测算</string>
    <string name="loading">加载中...</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="confirm">确定</string>
    <string name="weixin">微信</string>
    <string name="qq">QQ</string>
    <string name="sina">微博</string>
    <string name="password_manage">密码管理</string>
    <string name="update_password">修改密码</string>

    <string name="error_phone">手机号码格式错误</string>
    <string name="error_pwd">密码长度须是6~20字符</string>
    <string name="error_pwd_again">两次密码输入不一致</string>
    <string name="input_correct_code">请输入正确的验证码</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_pwd">请输入密码</string>

    <string name="header_float_behavior">com.huake.bondmaster.widget.HeaderFloatBehavior</string>
    <string name="header_scrolling_behavior">com.huake.bondmaster.widget.HeaderScrollingBehavior</string>


    <string name="error_tips">糟糕！加载失败了ヽ(≧Д≦)ノ</string>
    <string name="about_us_content">华科金控（深圳）有限公司（以下简称华科金控）是一家专注解决企业融资难题的金融咨询服务机构，咨询业务覆盖债券融资、非标融资、财务顾问、跨境金融服务等。 华科金控创新打造一站式债券融资咨询服务模式，为企业量身定制境内外债券融资方案，整合债券融资产业链资源，提供全流程优质服务，提高企业融资成功率。</string>
</resources>
