<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.huake.bondmaster.widget.ActionBar
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_height" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_login_bg"
            android:orientation="vertical">

            <com.huake.bondmaster.widget.ClearEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="手机号"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:inputType="phone"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/default_mobile"
                android:paddingTop="15dp"
                android:textSize="@dimen/my_common_text_size"
                android:textColor="#666666"
                android:textColorHint="#b2b2b2"
                 />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#d2d2d2" />

            <com.huake.bondmaster.widget.ClearEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="密码"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="@dimen/my_common_text_size"
                android:paddingTop="15dp"
                android:textColor="#666666"
                android:textColorHint="#b2b2b2"
                 />
        </LinearLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/selector_btn"
            android:enabled="false"
            android:text="@string/login"
            android:textColor="@color/selector_btn_colors"
            android:textSize="@dimen/action_bar_left_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:text="忘记密码?"
            android:textSize="@dimen/my_common_text_size" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#d2d2d2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="其他登录方式"
                android:textColor="#999999"
                android:textSize="@dimen/my_common_text_size" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#d2d2d2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_weixin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/selector_union_login_weixin_drawable"
                android:background="@drawable/selector_union_login_btn"
                android:drawablePadding="9dp"
                android:paddingLeft="20dp"
                android:gravity="center_vertical"
                android:text="@string/weixin"
                android:textColor="@color/selector_btn_white_grey_colors" />

            <Button
                android:id="@+id/btn_qq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/selector_union_login_qq_drawable"
                android:layout_marginLeft="10dp"
                android:background="@drawable/selector_union_login_btn"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:paddingLeft="24dp"
                android:gravity="center"
                android:text="@string/qq"
                android:src="@drawable/selector_union_login_qq_drawable"
                android:textColor="@color/selector_btn_white_grey_colors" />

            <Button
                android:id="@+id/btn_sina"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_union_login_btn"
                android:drawableLeft="@drawable/selector_union_login_sina_drawable"
                android:drawablePadding="0dp"
                android:paddingLeft="20dp"
                android:gravity="center"
                android:text="@string/sina"
                android:textColor="@color/selector_btn_white_grey_colors" />

        </LinearLayout>
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />
    </LinearLayout>

</RelativeLayout>