<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:toggle="http://schemas.android.com/apk/res-atuo"
    android:id="@+id/view_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/textview_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/action_bar_bg_color"
        android:orientation="vertical"
        android:paddingTop="28dp"
        android:paddingBottom="20dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_user_head"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/circle"
                android:padding="15dp"
                android:scaleType="fitCenter"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="25dp"
                android:src="@mipmap/default_head" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_user_head"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="用户名"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/my_user_name_size" />

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />


                <TextView
                    android:id="@+id/tv_user_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="手机号：123123123"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/my_user_mobile" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:src="@mipmap/ic_my_right_in" />


        </RelativeLayout>

    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/my_function_margin_left">

            <ImageView
                android:id="@+id/iv_new_message_notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_my_message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/iv_new_message_notify"
                android:text="@string/new_message_notify"
                android:textColor="#333333"
                android:textSize="@dimen/my_common_text_size" />

            <com.huake.bondmaster.widget.ToggleButton
                android:id="@+id/toggle_message_notify"
                android:layout_width="50dp"
                toggle:onColor="#54d769"
                toggle:offColor="#c9c8c8"
                toggle:spotColor="@color/colorWhite"
                toggle:offBorderColor="#e6e6e6"
                toggle:borderWidth="1px"
                android:layout_height="28dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/my_function_margin_left"
            android:background="@color/colorBackground" />


        <RelativeLayout
            android:id="@+id/rl_feed_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/my_function_margin_left">

            <ImageView
                android:id="@+id/iv_feed_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_my_feed_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/iv_feed_back"
                android:text="@string/feed_back"
                android:textColor="#333333"
                android:textSize="@dimen/my_common_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_my_function_right_in" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/my_function_margin_left"
            android:background="@color/colorBackground" />


        <RelativeLayout
            android:id="@+id/rl_share_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/my_function_margin_left">

            <ImageView
                android:id="@+id/iv_share_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_my_share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/iv_share_app"
                android:text="@string/share_app"
                android:textColor="#333333"
                android:textSize="@dimen/my_common_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_my_function_right_in" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/my_function_margin_left"
            android:background="@color/colorBackground" />


        <RelativeLayout
            android:id="@+id/rl_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/my_function_margin_left">

            <ImageView
                android:id="@+id/iv_about_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_my_about_us" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/iv_about_us"
                android:text="@string/about_us"
                android:textColor="#333333"
                android:textSize="@dimen/my_common_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_my_function_right_in" />


        </RelativeLayout>

    </LinearLayout>


</LinearLayout>